build/parser.output
Terminals unused in grammar

   "ERRO"


Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | stmts

    3 stmts: stmt
    4      | stmts stmt

    5 stmt: Global SC
    6     | Function

    7 SC: ';'

    8 Global: Type "ID" Vector

    9 Type: "INT"
   10     | "FLOAT"
   11     | "BOOL"
   12     | "CHAR"
   13     | "STRING"

   14 Vector: %empty
   15       | '[' "litInt" ']'

   16 Function: Header Body

   17 Header: Type "ID" List

   18 List: '(' ParaList ')'

   19 ParaList: Parameter ',' ParaList
   20         | Parameter

   21 Parameter: Local

   22 Body: '{' Block '}'

   23 Block: %empty
   24      | Block Command

   25 Command: Local SC
   26        | Attribution SC
   27        | FlowControl SC
   28        | Input SC
   29        | Output SC
   30        | Return SC
   31        | Call SC
   32        | Body
   33        | SC

   34 Local: Type "ID"

   35 ID: "ID" Vector

   36 Attribution: ID '=' Expression

   37 Expression: Literal
   38           | Expression '+' Expression
   39           | Expression '-' Expression
   40           | Expression '*' Expression
   41           | Expression '/' Expression
   42           | Expression '>' Expression
   43           | Expression '<' Expression
   44           | Expression "==" Expression
   45           | Expression "!=" Expression
   46           | Expression ">=" Expression
   47           | Expression "<=" Expression
   48           | Expression "&&" Expression
   49           | Expression "||" Expression
   50           | '(' Expression ')'
   51           | Call

   52 Literal: "ID" Vector
   53        | Boolean
   54        | "litInteger"
   55        | "litFloat"
   56        | "litChar"
   57        | "litString"

   58 Boolean: "false"
   59        | "true"

   60 Return: "RETURN" Expression

   61 FlowControl: If
   62            | While

   63 If: "IF" '(' Expression ')' "THEN" Body Else

   64 Else: %empty
   65     | "ELSE" Body

   66 While: "WHILE" '(' Expression ')' "DO" Body
   67      | "DO" Body "WHILE" '(' Expression ')' SC

   68 Input: "INPUT" ID

   69 Output: "OUTPUT" ExpList

   70 Call: "ID" '(' ExpList ')'

   71 ExpList: Expression ',' ExpList
   72        | Expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 50 63 66 67 70
')' (41) 18 50 63 66 67 70
'*' (42) 40
'+' (43) 38
',' (44) 19 71
'-' (45) 39
'/' (47) 41
';' (59) 7
'<' (60) 43
'=' (61) 36
'>' (62) 42
'[' (91) 15
']' (93) 15
'{' (123) 22
'}' (125) 22
error (256)
"INT" (258) 9
"FLOAT" (259) 10
"BOOL" (260) 11
"CHAR" (261) 12
"STRING" (262) 13
"IF" (263) 63
"THEN" (264) 63
"ELSE" (265) 65
"WHILE" (266) 66 67
"DO" (267) 66 67
"INPUT" (268) 68
"OUTPUT" (269) 69
"RETURN" (270) 60
"<=" (271) 47
">=" (272) 46
"==" (273) 44
"!=" (274) 45
"&&" (275) 48
"||" (276) 49
"litInt" (277) 15
"litFloat" (278) 55
"false" (279) 58
"true" (280) 59
"litChar" (281) 56
"litString" (282) 57
"ID" (283) 8 17 34 35 52 70
"ERRO" (284)
"litInteger" (285) 54


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Program (47)
    on left: 1 2, on right: 0
stmts (48)
    on left: 3 4, on right: 2 4
stmt (49)
    on left: 5 6, on right: 3 4
SC (50)
    on left: 7, on right: 5 25 26 27 28 29 30 31 33 67
Global (51)
    on left: 8, on right: 5
Type (52)
    on left: 9 10 11 12 13, on right: 8 17 34
Vector (53)
    on left: 14 15, on right: 8 35 52
Function (54)
    on left: 16, on right: 6
Header (55)
    on left: 17, on right: 16
List (56)
    on left: 18, on right: 17
ParaList (57)
    on left: 19 20, on right: 18 19
Parameter (58)
    on left: 21, on right: 19 20
Body (59)
    on left: 22, on right: 16 32 63 65 66 67
Block (60)
    on left: 23 24, on right: 22 24
Command (61)
    on left: 25 26 27 28 29 30 31 32 33, on right: 24
Local (62)
    on left: 34, on right: 21 25
ID (63)
    on left: 35, on right: 36 68
Attribution (64)
    on left: 36, on right: 26
Expression (65)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51, on right:
    36 38 39 40 41 42 43 44 45 46 47 48 49 50 60 63 66 67 71 72
Literal (66)
    on left: 52 53 54 55 56 57, on right: 37
Boolean (67)
    on left: 58 59, on right: 53
Return (68)
    on left: 60, on right: 30
FlowControl (69)
    on left: 61 62, on right: 27
If (70)
    on left: 63, on right: 61
Else (71)
    on left: 64 65, on right: 63
While (72)
    on left: 66 67, on right: 62
Input (73)
    on left: 68, on right: 28
Output (74)
    on left: 69, on right: 29
Call (75)
    on left: 70, on right: 31 51
ExpList (76)
    on left: 71 72, on right: 69 70 71


State 0

    0 $accept: . Program $end

    "INT"     shift, and go to state 1
    "FLOAT"   shift, and go to state 2
    "BOOL"    shift, and go to state 3
    "CHAR"    shift, and go to state 4
    "STRING"  shift, and go to state 5

    $default  reduce using rule 1 (Program)

    Program   go to state 6
    stmts     go to state 7
    stmt      go to state 8
    Global    go to state 9
    Type      go to state 10
    Function  go to state 11
    Header    go to state 12


State 1

    9 Type: "INT" .

    $default  reduce using rule 9 (Type)


State 2

   10 Type: "FLOAT" .

    $default  reduce using rule 10 (Type)


State 3

   11 Type: "BOOL" .

    $default  reduce using rule 11 (Type)


State 4

   12 Type: "CHAR" .

    $default  reduce using rule 12 (Type)


State 5

   13 Type: "STRING" .

    $default  reduce using rule 13 (Type)


State 6

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 7

    2 Program: stmts .
    4 stmts: stmts . stmt

    "INT"     shift, and go to state 1
    "FLOAT"   shift, and go to state 2
    "BOOL"    shift, and go to state 3
    "CHAR"    shift, and go to state 4
    "STRING"  shift, and go to state 5

    $default  reduce using rule 2 (Program)

    stmt      go to state 14
    Global    go to state 9
    Type      go to state 10
    Function  go to state 11
    Header    go to state 12


State 8

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


State 9

    5 stmt: Global . SC

    ';'  shift, and go to state 15

    SC  go to state 16


State 10

    8 Global: Type . "ID" Vector
   17 Header: Type . "ID" List

    "ID"  shift, and go to state 17


State 11

    6 stmt: Function .

    $default  reduce using rule 6 (stmt)


State 12

   16 Function: Header . Body

    '{'  shift, and go to state 18

    Body  go to state 19


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    4 stmts: stmts stmt .

    $default  reduce using rule 4 (stmts)


State 15

    7 SC: ';' .

    $default  reduce using rule 7 (SC)


State 16

    5 stmt: Global SC .

    $default  reduce using rule 5 (stmt)


State 17

    8 Global: Type "ID" . Vector
   17 Header: Type "ID" . List

    '['  shift, and go to state 20
    '('  shift, and go to state 21

    $default  reduce using rule 14 (Vector)

    Vector  go to state 22
    List    go to state 23


State 18

   22 Body: '{' . Block '}'

    $default  reduce using rule 23 (Block)

    Block  go to state 24


State 19

   16 Function: Header Body .

    $default  reduce using rule 16 (Function)


State 20

   15 Vector: '[' . "litInt" ']'

    "litInt"  shift, and go to state 25


State 21

   18 List: '(' . ParaList ')'

    "INT"     shift, and go to state 1
    "FLOAT"   shift, and go to state 2
    "BOOL"    shift, and go to state 3
    "CHAR"    shift, and go to state 4
    "STRING"  shift, and go to state 5

    Type       go to state 26
    ParaList   go to state 27
    Parameter  go to state 28
    Local      go to state 29


State 22

    8 Global: Type "ID" Vector .

    $default  reduce using rule 8 (Global)


State 23

   17 Header: Type "ID" List .

    $default  reduce using rule 17 (Header)


State 24

   22 Body: '{' Block . '}'
   24 Block: Block . Command

    "INT"     shift, and go to state 1
    "FLOAT"   shift, and go to state 2
    "BOOL"    shift, and go to state 3
    "CHAR"    shift, and go to state 4
    "STRING"  shift, and go to state 5
    "IF"      shift, and go to state 30
    "WHILE"   shift, and go to state 31
    "DO"      shift, and go to state 32
    "INPUT"   shift, and go to state 33
    "OUTPUT"  shift, and go to state 34
    "RETURN"  shift, and go to state 35
    "ID"      shift, and go to state 36
    ';'       shift, and go to state 15
    '{'       shift, and go to state 18
    '}'       shift, and go to state 37

    SC           go to state 38
    Type         go to state 26
    Body         go to state 39
    Command      go to state 40
    Local        go to state 41
    ID           go to state 42
    Attribution  go to state 43
    Return       go to state 44
    FlowControl  go to state 45
    If           go to state 46
    While        go to state 47
    Input        go to state 48
    Output       go to state 49
    Call         go to state 50


State 25

   15 Vector: '[' "litInt" . ']'

    ']'  shift, and go to state 51


State 26

   34 Local: Type . "ID"

    "ID"  shift, and go to state 52


State 27

   18 List: '(' ParaList . ')'

    ')'  shift, and go to state 53


State 28

   19 ParaList: Parameter . ',' ParaList
   20         | Parameter .

    ','  shift, and go to state 54

    $default  reduce using rule 20 (ParaList)


State 29

   21 Parameter: Local .

    $default  reduce using rule 21 (Parameter)


State 30

   63 If: "IF" . '(' Expression ')' "THEN" Body Else

    '('  shift, and go to state 55


State 31

   66 While: "WHILE" . '(' Expression ')' "DO" Body

    '('  shift, and go to state 56


State 32

   67 While: "DO" . Body "WHILE" '(' Expression ')' SC

    '{'  shift, and go to state 18

    Body  go to state 57


State 33

   68 Input: "INPUT" . ID

    "ID"  shift, and go to state 58

    ID  go to state 59


State 34

   69 Output: "OUTPUT" . ExpList

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 68
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71
    ExpList     go to state 72


State 35

   60 Return: "RETURN" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 73
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 36

   35 ID: "ID" . Vector
   70 Call: "ID" . '(' ExpList ')'

    '['  shift, and go to state 20
    '('  shift, and go to state 74

    $default  reduce using rule 14 (Vector)

    Vector  go to state 75


State 37

   22 Body: '{' Block '}' .

    $default  reduce using rule 22 (Body)


State 38

   33 Command: SC .

    $default  reduce using rule 33 (Command)


State 39

   32 Command: Body .

    $default  reduce using rule 32 (Command)


State 40

   24 Block: Block Command .

    $default  reduce using rule 24 (Block)


State 41

   25 Command: Local . SC

    ';'  shift, and go to state 15

    SC  go to state 76


State 42

   36 Attribution: ID . '=' Expression

    '='  shift, and go to state 77


State 43

   26 Command: Attribution . SC

    ';'  shift, and go to state 15

    SC  go to state 78


State 44

   30 Command: Return . SC

    ';'  shift, and go to state 15

    SC  go to state 79


State 45

   27 Command: FlowControl . SC

    ';'  shift, and go to state 15

    SC  go to state 80


State 46

   61 FlowControl: If .

    $default  reduce using rule 61 (FlowControl)


State 47

   62 FlowControl: While .

    $default  reduce using rule 62 (FlowControl)


State 48

   28 Command: Input . SC

    ';'  shift, and go to state 15

    SC  go to state 81


State 49

   29 Command: Output . SC

    ';'  shift, and go to state 15

    SC  go to state 82


State 50

   31 Command: Call . SC

    ';'  shift, and go to state 15

    SC  go to state 83


State 51

   15 Vector: '[' "litInt" ']' .

    $default  reduce using rule 15 (Vector)


State 52

   34 Local: Type "ID" .

    $default  reduce using rule 34 (Local)


State 53

   18 List: '(' ParaList ')' .

    $default  reduce using rule 18 (List)


State 54

   19 ParaList: Parameter ',' . ParaList

    "INT"     shift, and go to state 1
    "FLOAT"   shift, and go to state 2
    "BOOL"    shift, and go to state 3
    "CHAR"    shift, and go to state 4
    "STRING"  shift, and go to state 5

    Type       go to state 26
    ParaList   go to state 84
    Parameter  go to state 28
    Local      go to state 29


State 55

   63 If: "IF" '(' . Expression ')' "THEN" Body Else

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 85
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 56

   66 While: "WHILE" '(' . Expression ')' "DO" Body

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 86
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 57

   67 While: "DO" Body . "WHILE" '(' Expression ')' SC

    "WHILE"  shift, and go to state 87


State 58

   35 ID: "ID" . Vector

    '['  shift, and go to state 20

    $default  reduce using rule 14 (Vector)

    Vector  go to state 75


State 59

   68 Input: "INPUT" ID .

    $default  reduce using rule 68 (Input)


State 60

   55 Literal: "litFloat" .

    $default  reduce using rule 55 (Literal)


State 61

   58 Boolean: "false" .

    $default  reduce using rule 58 (Boolean)


State 62

   59 Boolean: "true" .

    $default  reduce using rule 59 (Boolean)


State 63

   56 Literal: "litChar" .

    $default  reduce using rule 56 (Literal)


State 64

   57 Literal: "litString" .

    $default  reduce using rule 57 (Literal)


State 65

   52 Literal: "ID" . Vector
   70 Call: "ID" . '(' ExpList ')'

    '['  shift, and go to state 20
    '('  shift, and go to state 74

    $default  reduce using rule 14 (Vector)

    Vector  go to state 88


State 66

   50 Expression: '(' . Expression ')'

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 89
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 67

   54 Literal: "litInteger" .

    $default  reduce using rule 54 (Literal)


State 68

   38 Expression: Expression . '+' Expression
   39           | Expression . '-' Expression
   40           | Expression . '*' Expression
   41           | Expression . '/' Expression
   42           | Expression . '>' Expression
   43           | Expression . '<' Expression
   44           | Expression . "==" Expression
   45           | Expression . "!=" Expression
   46           | Expression . ">=" Expression
   47           | Expression . "<=" Expression
   48           | Expression . "&&" Expression
   49           | Expression . "||" Expression
   71 ExpList: Expression . ',' ExpList
   72        | Expression .

    "<="  shift, and go to state 90
    ">="  shift, and go to state 91
    "=="  shift, and go to state 92
    "!="  shift, and go to state 93
    "&&"  shift, and go to state 94
    "||"  shift, and go to state 95
    '+'   shift, and go to state 96
    '-'   shift, and go to state 97
    '*'   shift, and go to state 98
    '/'   shift, and go to state 99
    '>'   shift, and go to state 100
    '<'   shift, and go to state 101
    ','   shift, and go to state 102

    $default  reduce using rule 72 (ExpList)


State 69

   37 Expression: Literal .

    $default  reduce using rule 37 (Expression)


State 70

   53 Literal: Boolean .

    $default  reduce using rule 53 (Literal)


State 71

   51 Expression: Call .

    $default  reduce using rule 51 (Expression)


State 72

   69 Output: "OUTPUT" ExpList .

    $default  reduce using rule 69 (Output)


State 73

   38 Expression: Expression . '+' Expression
   39           | Expression . '-' Expression
   40           | Expression . '*' Expression
   41           | Expression . '/' Expression
   42           | Expression . '>' Expression
   43           | Expression . '<' Expression
   44           | Expression . "==" Expression
   45           | Expression . "!=" Expression
   46           | Expression . ">=" Expression
   47           | Expression . "<=" Expression
   48           | Expression . "&&" Expression
   49           | Expression . "||" Expression
   60 Return: "RETURN" Expression .

    "<="  shift, and go to state 90
    ">="  shift, and go to state 91
    "=="  shift, and go to state 92
    "!="  shift, and go to state 93
    "&&"  shift, and go to state 94
    "||"  shift, and go to state 95
    '+'   shift, and go to state 96
    '-'   shift, and go to state 97
    '*'   shift, and go to state 98
    '/'   shift, and go to state 99
    '>'   shift, and go to state 100
    '<'   shift, and go to state 101

    $default  reduce using rule 60 (Return)


State 74

   70 Call: "ID" '(' . ExpList ')'

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 68
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71
    ExpList     go to state 103


State 75

   35 ID: "ID" Vector .

    $default  reduce using rule 35 (ID)


State 76

   25 Command: Local SC .

    $default  reduce using rule 25 (Command)


State 77

   36 Attribution: ID '=' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 104
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 78

   26 Command: Attribution SC .

    $default  reduce using rule 26 (Command)


State 79

   30 Command: Return SC .

    $default  reduce using rule 30 (Command)


State 80

   27 Command: FlowControl SC .

    $default  reduce using rule 27 (Command)


State 81

   28 Command: Input SC .

    $default  reduce using rule 28 (Command)


State 82

   29 Command: Output SC .

    $default  reduce using rule 29 (Command)


State 83

   31 Command: Call SC .

    $default  reduce using rule 31 (Command)


State 84

   19 ParaList: Parameter ',' ParaList .

    $default  reduce using rule 19 (ParaList)


State 85

   38 Expression: Expression . '+' Expression
   39           | Expression . '-' Expression
   40           | Expression . '*' Expression
   41           | Expression . '/' Expression
   42           | Expression . '>' Expression
   43           | Expression . '<' Expression
   44           | Expression . "==" Expression
   45           | Expression . "!=" Expression
   46           | Expression . ">=" Expression
   47           | Expression . "<=" Expression
   48           | Expression . "&&" Expression
   49           | Expression . "||" Expression
   63 If: "IF" '(' Expression . ')' "THEN" Body Else

    "<="  shift, and go to state 90
    ">="  shift, and go to state 91
    "=="  shift, and go to state 92
    "!="  shift, and go to state 93
    "&&"  shift, and go to state 94
    "||"  shift, and go to state 95
    '+'   shift, and go to state 96
    '-'   shift, and go to state 97
    '*'   shift, and go to state 98
    '/'   shift, and go to state 99
    '>'   shift, and go to state 100
    '<'   shift, and go to state 101
    ')'   shift, and go to state 105


State 86

   38 Expression: Expression . '+' Expression
   39           | Expression . '-' Expression
   40           | Expression . '*' Expression
   41           | Expression . '/' Expression
   42           | Expression . '>' Expression
   43           | Expression . '<' Expression
   44           | Expression . "==" Expression
   45           | Expression . "!=" Expression
   46           | Expression . ">=" Expression
   47           | Expression . "<=" Expression
   48           | Expression . "&&" Expression
   49           | Expression . "||" Expression
   66 While: "WHILE" '(' Expression . ')' "DO" Body

    "<="  shift, and go to state 90
    ">="  shift, and go to state 91
    "=="  shift, and go to state 92
    "!="  shift, and go to state 93
    "&&"  shift, and go to state 94
    "||"  shift, and go to state 95
    '+'   shift, and go to state 96
    '-'   shift, and go to state 97
    '*'   shift, and go to state 98
    '/'   shift, and go to state 99
    '>'   shift, and go to state 100
    '<'   shift, and go to state 101
    ')'   shift, and go to state 106


State 87

   67 While: "DO" Body "WHILE" . '(' Expression ')' SC

    '('  shift, and go to state 107


State 88

   52 Literal: "ID" Vector .

    $default  reduce using rule 52 (Literal)


State 89

   38 Expression: Expression . '+' Expression
   39           | Expression . '-' Expression
   40           | Expression . '*' Expression
   41           | Expression . '/' Expression
   42           | Expression . '>' Expression
   43           | Expression . '<' Expression
   44           | Expression . "==" Expression
   45           | Expression . "!=" Expression
   46           | Expression . ">=" Expression
   47           | Expression . "<=" Expression
   48           | Expression . "&&" Expression
   49           | Expression . "||" Expression
   50           | '(' Expression . ')'

    "<="  shift, and go to state 90
    ">="  shift, and go to state 91
    "=="  shift, and go to state 92
    "!="  shift, and go to state 93
    "&&"  shift, and go to state 94
    "||"  shift, and go to state 95
    '+'   shift, and go to state 96
    '-'   shift, and go to state 97
    '*'   shift, and go to state 98
    '/'   shift, and go to state 99
    '>'   shift, and go to state 100
    '<'   shift, and go to state 101
    ')'   shift, and go to state 108


State 90

   47 Expression: Expression "<=" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 109
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 91

   46 Expression: Expression ">=" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 110
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 92

   44 Expression: Expression "==" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 111
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 93

   45 Expression: Expression "!=" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 112
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 94

   48 Expression: Expression "&&" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 113
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 95

   49 Expression: Expression "||" . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 114
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 96

   38 Expression: Expression '+' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 115
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 97

   39 Expression: Expression '-' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 116
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 98

   40 Expression: Expression '*' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 117
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 99

   41 Expression: Expression '/' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 118
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 100

   42 Expression: Expression '>' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 119
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 101

   43 Expression: Expression '<' . Expression

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 120
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 102

   71 ExpList: Expression ',' . ExpList

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 68
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71
    ExpList     go to state 121


State 103

   70 Call: "ID" '(' ExpList . ')'

    ')'  shift, and go to state 122


State 104

   36 Attribution: ID '=' Expression .
   38 Expression: Expression . '+' Expression
   39           | Expression . '-' Expression
   40           | Expression . '*' Expression
   41           | Expression . '/' Expression
   42           | Expression . '>' Expression
   43           | Expression . '<' Expression
   44           | Expression . "==" Expression
   45           | Expression . "!=" Expression
   46           | Expression . ">=" Expression
   47           | Expression . "<=" Expression
   48           | Expression . "&&" Expression
   49           | Expression . "||" Expression

    "<="  shift, and go to state 90
    ">="  shift, and go to state 91
    "=="  shift, and go to state 92
    "!="  shift, and go to state 93
    "&&"  shift, and go to state 94
    "||"  shift, and go to state 95
    '+'   shift, and go to state 96
    '-'   shift, and go to state 97
    '*'   shift, and go to state 98
    '/'   shift, and go to state 99
    '>'   shift, and go to state 100
    '<'   shift, and go to state 101

    $default  reduce using rule 36 (Attribution)


State 105

   63 If: "IF" '(' Expression ')' . "THEN" Body Else

    "THEN"  shift, and go to state 123


State 106

   66 While: "WHILE" '(' Expression ')' . "DO" Body

    "DO"  shift, and go to state 124


State 107

   67 While: "DO" Body "WHILE" '(' . Expression ')' SC

    "litFloat"    shift, and go to state 60
    "false"       shift, and go to state 61
    "true"        shift, and go to state 62
    "litChar"     shift, and go to state 63
    "litString"   shift, and go to state 64
    "ID"          shift, and go to state 65
    '('           shift, and go to state 66
    "litInteger"  shift, and go to state 67

    Expression  go to state 125
    Literal     go to state 69
    Boolean     go to state 70
    Call        go to state 71


State 108

   50 Expression: '(' Expression ')' .

    $default  reduce using rule 50 (Expression)


State 109
